Versión limpia limpia, la clase main está hecha mierda pero todo lo demás ya está