@@ -1,12 +1,20 @@
 import java.util.List;
 import java.util.ArrayList;
 public class Baraja {
-    private final List<Carta> cartas=new ArrayList<>();
-
+    private final List<Carta> cartas = new ArrayList<>();
     public Baraja(){
         reiniciar();
     }
-
+    private void barajar(){
+        if (cartas.isEmpty()||cartas.size()==1) return;
+        int n= cartas.size();
+        for (int i = n - 1; i > 0; i--) {
+            int aux = (int) (Math.random() * (i + 1));
+            Carta temp=cartas.get(i);
+            cartas.set(i, cartas.get(aux));
+            cartas.set(aux, temp);
+        }
+    }
     public void reiniciar(){
         cartas.clear();
         for (Mazo m : Mazo.values()) {
@@ -16,25 +24,10 @@ public class Baraja {
         }
         barajar();
     }
-
-    private void barajar(){
-        if (cartas.isEmpty()||cartas.size()==1) return;
-        int n= cartas.size();
-            for (int i = n - 1; i > 0; i--) {
-                int aux = (int) (Math.random() * (i + 1));
-                Carta temp=cartas.get(i);
-                cartas.set(i, cartas.get(aux));
-                cartas.set(aux, temp);
-            }
-    }
     public Carta repartir(){
         if (cartas.isEmpty()){
             throw new IllegalStateException("La baraja está vacía, no se pueden repartir más cartas.");
         }
-        return cartas.remove(cartas.size()-1);
+        return cartas.removeLast();
     }
-
-    /*public int cartasRestantes(){
-        return cartas.size();
-    }*/
 }
